<resources>
    <string name="app_name">Tally Counter</string>

    <string name="counter_display_default">0</string>
    <string name="start_count_label">Start Count</string>
    <string name="increment_label">Increment</string>
    <string name="counter_name_default">Counter</string>
    <string name="reset">Reset</string>
    <string name="set_button">Set</string>
    <string name="settings_title">Settings</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="new_counter">New Counter</string>

</resources>
