<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <!-- Counter title row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ViewSwitcher
            android:id="@+id/counter_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/counter_name_default"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </ViewSwitcher>

        <ImageButton
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_autorenew_black_24px"/>

    </LinearLayout>

    <!-- Counter Display -->
    <TextView
        android:id="@+id/counter_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/counter_display_margin"
        android:text="@string/counter_display_default"
        android:textAlignment="center"
        android:textSize="@dimen/counter_display_text_size" />

    <!-- Settings -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_count_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/counter_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="0"
            android:inputType="number"/>

        <Button
            android:id="@+id/counter_start_set_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_button"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/increment_label"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/counter_increment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="1"
            android:inputType="number"/>

        <Button
            android:id="@+id/counter_increment_set_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_button"/>

    </LinearLayout>

    <!-- Increment Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/increment_button_height"
            android:layout_weight="2"
            android:src="@drawable/ic_add_black_24px"/>

        <ImageButton
            android:id="@+id/sub_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/increment_button_height"
            android:layout_weight="1"
            android:src="@drawable/ic_remove_black_24px"/>

    </LinearLayout>

</LinearLayout>